--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <nav> esto es una nav</nav>
     <h1>primer commit</h1>
+    <footer>
+        <h6> eso es todo amigos</h6>
+    </footer>
 </body>
 </html>
