--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <nav> esto es una nav</nav>
     <h1>primer commit</h1>
+    <h5>seguimos modificando</h5>
     <footer>
         <h6> eso es todo amigos</h6>
     </footer>
